# test-dsl

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  changelog.toml  flake.nix
.changelogs/0.2.0/: 2025-03-28T18_10_14_780780229.md  2025-03-28T18_10_30_241381522.md
.changelogs/0.3.0/: 2025-03-28T19_03_51_896953643.md  2025-04-01T16_26_52_496941638.md
.changelogs/0.4.0/: 2025-04-02T08_10_15_325511948.md
.changelogs/unreleased/: 2025-03-28T15_29_46_951628672.md  2025-03-28T19_03_10_936994467.md  2025-04-01T05_37_12_778684767.md  2025-04-01T13_08_32_572262882.md  2025-04-01T13_09_15_626663787.md  2025-04-01T16_46_37_012675757.md  2025-04-03T08_52_15_90030506.md
src/: arguments.rs  condition.rs  error.rs  lib.rs  macros.rs  test_case.rs  verb.rs
tests/: macros.rs  output.rs
tests/snapshots/: output__check_argument_wrong_type.snap  output__check_argument_wrong_type_verb-2.snap  output__check_argument_wrong_type_verb.snap  output__check_conditions.snap  output__check_invalid.snap  output__check_missing_argument.snap  output__check_unknown.snap  output__check_verb_panic_fail.snap
