[package]
name = "test-dsl"
version = "0.3.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "A helper crate to define easy-to-author tests as KDL documents"
repository = "https://github.com/TheNeikos/test-dsl"
keywords = ["testing", "dsl", "kdl"]
categories = ["development-tools::testing"]
resolver = "2"

[lints.clippy]
type_complexity = "allow"

[lints.rust]
missing_docs = "warn"

[dependencies]
kdl = "6.3.4"
miette = "7.5.0"
thiserror = "2.0.12"

[dev-dependencies]
insta = "1.42.2"
miette = { version = "7.5.0", features = ["fancy"] }
